--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,14 @@
 
     </properties>
 
+    <dependencies>
+        // ! https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 </project>
